The pending input method id should NOT be changed according to the lookup result.

The input method lookup will return the first active input method if the given input method id is not in the active input method list.
If the pending input method id is changed, the wrong input method will be activated after the 3rd party IME extension is loaded.

Bug: 835711
Change-Id: I2092fe737986d9e2c2a7277d3ebdff28665343cd
Reviewed-on: https://chromium-review.googlesource.com/1080474
Reviewed-by: Lan Wei <azurewei@chromium.org>
Commit-Queue: Lan Wei <azurewei@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563180}
Former-commit-id: 23035e85d68218ea6c167505343edd82f94e4a67